# fastapi-blog

./: Caddyfile  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  auth.py  config.py  database.py  email_utils.py  image_util.py  main.py  models.py  notes.txt  post_create.py  pyproject.toml  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 36894ad1de07_add_blog_image_file_to_blogposts.py  661e46fa971e_initial_schema.py  9500279d7344_add_role_to_user.py
backend/routers/: posts.py  users.py
backend/storage/: supabase_client.py
backend/templates/: email.html  home.html
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/forgot-password/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/reset-password/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/writers/: page.tsx
frontend/src/components/feed/: FeedCard.tsx  FeedGrid.tsx  FeedSkeleton.tsx
frontend/src/components/post/: PostEditor.tsx
frontend/src/components/settings/: AvatarUploader.tsx
frontend/src/components/shell/: AvatarMenu.tsx  Footer.tsx  Header.tsx  Shell.tsx
frontend/src/components/ui/: Avatar.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Tag.tsx  Textarea.tsx  Toast.tsx
frontend/src/lib/: cn.ts  mock.ts  types.ts  validation.ts
frontend/src/store/: auth.ts  blog.ts  toast.ts
(+5 files in other folders)
