[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.5",
    "fastapi[standard]>=0.138.0",
    "passlib[argon2]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
]
